fixing styling on mobile

--- a/src/scss/modules/_general.scss
+++ b/src/scss/modules/_general.scss
@@ -62,6 +62,7 @@ input, select, textarea {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
+         -webkit-appearance:none;
 
 }
 * {
